--- a/base-config.yaml
+++ b/base-config.yaml
@@ -1,49 +1,10 @@
-templates:
-  reaction:
-    type: m.reaction
-    variables:
-      react_to_event: "{{event.content.get_reply_to() or event.event_id}}"
-    content:
-      m.relates_to:
-        rel_type: m.annotation
-        event_id: $${react_to_event}
-        key: $${reaction}
-  alot:
-    type: m.room.message
-    content:
-      msgtype: m.image
-      body: image.png
-      url: "mxc://maunium.net/eFnyRdgJOHlKXCxzoKPQbwLV"
-      info:
-        mimetype: image/png
-        w: 680
-        h: 510
-        size: 247492
-        thumbnail_url: "mxc://maunium.net/PMxffxMfcUZeWeeYMDCdghBG"
-        thumbnail_info:
-          w: 680
-          h: 510
-          mimetype: image/png
-          size: 233763
-
-default_flags:
-- ignorecase
-
-antispam:
-  room:
-    max: 1
-    delay: 60
-  user:
-    max: 2
-    delay: 60
-
 rules:
-  twim_cookies:
-    rooms: ["!FPUfgzXYWTKgIrwKxW:matrix.org"]
-    matches: [^TWIM]
-    template: reaction
-    variables:
-      reaction: 🍪
-  alot:
-    matches: [alot]
-    template: alot
+  rule1:
+    source_rooms: ["!roomid:example.com", "!roomid2:example.com"]
+    target_room: "!t_roomid:example.com"
+    users: ["@user:example.com"]
+    reaction: "👀"
+  rule2:
+    source_rooms: ["!roomid2:example.com"]
+    target_room: "!t_roomid2:example.com"
+    reaction: "⭐️"
